--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 
 title: Edit _config.yml to set your title!
 description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+github_username: zhouguangli
 
 # Email and twitter are optional:
-email:
+email: 2774492230@qq.com
 twitter_username:
 
 # Set this to true to get LaTeX math equation support
