--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: zhouguangli's blog
-description:  github zhouguangli
+title: 周光利的博客
+description:  周光利的博客
 github_username: zhouguangli
 
 # Email and twitter are optional:
