--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: 周光利的博客
-description:  周光利的博客
+title: 周光利的技术博客
+description:  主要记录些日常开发过程中的踩坑经历
 github_username: zhouguangli
 
 # Email and twitter are optional:
