--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #
 
 title: 周光利的技术博客
-description:  主要记录些日常开发过程中的踩坑经历
+description:  [个人知乎地址](https://www.zhihu.com/people/li-zhou-73-2/posts) 
 github_username: zhouguangli
 
 # Email and twitter are optional:
